# xiangqi-llm-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  命令
configs/: engine.yaml  llm.yaml  retrieval.yaml  reward.yaml  self_play.yaml
frontend/: README.md  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx
frontend/src/components/: ChessBoard.css  ChessBoard.jsx
frontend/src/pages/: ELOPage.css  ELOPage.jsx  GamePage.css  GamePage.jsx  ReplayPage.css  ReplayPage.jsx
scripts/: cleanup_experience.py  evaluate_agent.py  import_human_games.py  run_self_play.py
src/: main.py
src/api/: server.py
src/evaluation/: elo.py
src/game/: board.py  engine_adapter.py  notation.py
src/llm/: client.py  move_selector.py  prompts.py
src/memory/: schema.py  store.py  updater.py
src/retrieval/: Untitled  bias.py  encoder.py  index.py
src/reward/: evaluator.py
src/self_play/: exploration.py  game_runner.py  player.py
src/utils/: __init__.py  config_loader.py
